// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VerifiedContracts.vue > Should handle loading states 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <h2 class="text-h6 font-weight-medium">Verified Contracts</h2>
  <hr class="v-divider v-theme--light my-4" aria-orientation="horizontal" role="separator">
  <div class="v-row">
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Deployed (total)" loading="false" long="false" raw="true"></stat-number-stub>
    </div>
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Deployed (24h)" loading="false" long="false" raw="true"></stat-number-stub>
    </div>
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Verified (Total)" loading="false" long="false" raw="false"></stat-number-stub>
    </div>
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Verified (24h)" loading="false" long="false" raw="true"></stat-number-stub>
    </div>
  </div>
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated mt-4">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" disable-pagination="true">
        <!---->
        <div class="v-table__wrapper">
          <table>
            <!---->
            <thead class="v-data-table__thead" role="rowgroup">
              <tr>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Address</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Name</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Compiler Version</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Txns</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Settings</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Verified</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Tags</span>
                    <!---->
                    <!---->
                  </div>
                </th>
              </tr>
              <!---->
            </thead>
            <!---->
            <tbody class="v-data-table__tbody" role="rowgroup">
              <!---->
              <tr class="v-data-table-rows-no-data">
                <td colspan="7">No data available</td>
              </tr>
              <!---->
            </tbody>
            <!---->
            <!---->
          </table>
        </div>
        <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
        <div class="v-data-table-footer">
          <!---->
          <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
            <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
              <!---->
              <div class="v-input__control">
                <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox">
                  <div class="v-field__overlay"></div>
                  <div class="v-field__loader">
                    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <div class="v-field__field" data-no-activator="">
                    <!---->
                    <!---->
                    <!---->
                    <div class="v-field__input" data-no-activator="">
                      <!---->
                      <!---->
                      <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open" value="10">
                    </div>
                    <!---->
                  </div>
                  <!---->
                  <div class="v-field__append-inner">
                    <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                  <div class="v-field__outline">
                    <div class="v-field__outline__start"></div>
                    <!---->
                    <div class="v-field__outline__end"></div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class="v-data-table-footer__info">
            <div>0-0 of 0</div>
          </div>
          <div class="v-data-table-footer__pagination">
            <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
              <ul class="v-pagination__list">
                <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Next page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Last page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`VerifiedContracts.vue > Should handle pagination updates 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <h2 class="text-h6 font-weight-medium">Verified Contracts</h2>
  <hr class="v-divider v-theme--light my-4" aria-orientation="horizontal" role="separator">
  <div class="v-row">
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Deployed (total)" loading="false" long="false" raw="true" value="100"></stat-number-stub>
    </div>
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Deployed (24h)" loading="false" long="false" raw="true" value="5"></stat-number-stub>
    </div>
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Verified (Total)" loading="false" long="false" raw="false" value="50"></stat-number-stub>
    </div>
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Verified (24h)" loading="false" long="false" raw="true" value="2"></stat-number-stub>
    </div>
  </div>
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated mt-4">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" disable-pagination="true">
        <!---->
        <div class="v-table__wrapper">
          <table>
            <!---->
            <thead class="v-data-table__thead" role="rowgroup">
              <tr>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Address</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Name</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Compiler Version</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Txns</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Settings</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Verified</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Tags</span>
                    <!---->
                    <!---->
                  </div>
                </th>
              </tr>
              <!---->
            </thead>
            <!---->
            <tbody class="v-data-table__tbody" role="rowgroup">
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x456" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">TestContract2</td>
                <td class="v-data-table__td v-data-table-column--align-start">0.8.0</td>
                <td class="v-data-table__td v-data-table-column--align-start">5</td>
                <td class="v-data-table__td v-data-table-column--align-start"><i class="mdi-lightning-bolt mdi v-icon notranslate v-theme--light v-icon--size-small mr-2" aria-hidden="true" aria-describedby="v-tooltip-9">
                    <!---->
                    <!--teleport start-->
                    <!--teleport end-->
                  </i><i class="mdi-wrench mdi v-icon notranslate v-theme--light v-icon--size-small" aria-hidden="true" aria-describedby="v-tooltip-7"></i>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">03/20 11:00:00 AM<br><small class="text-caption text-medium-emphasis">in 1 year</small></td>
                <td class="v-data-table__td v-data-table-column--align-start"><span class="v-chip v-theme--light text-success v-chip--density-default v-chip--size-small v-chip--variant-tonal mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
                  <!---->
                  <!---->
                  <div class="v-chip__content" data-no-activator="">ERC721</div>
                  <!---->
                  <!----></span>
                </td>
              </tr>
              <!---->
              <!---->
            </tbody>
            <!---->
            <!---->
          </table>
        </div>
        <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
        <div class="v-data-table-footer">
          <!---->
          <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
            <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
              <!---->
              <div class="v-input__control">
                <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-2">
                  <div class="v-field__overlay"></div>
                  <div class="v-field__loader">
                    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <div class="v-field__field" data-no-activator="">
                    <!---->
                    <!---->
                    <!---->
                    <div class="v-field__input" data-no-activator="">
                      <!---->
                      <!---->
                      <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open" value="10">
                    </div>
                    <!---->
                  </div>
                  <!---->
                  <div class="v-field__append-inner">
                    <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                  <div class="v-field__outline">
                    <div class="v-field__outline__start"></div>
                    <!---->
                    <div class="v-field__outline__end"></div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class="v-data-table-footer__info">
            <div>1-10 of 50</div>
          </div>
          <div class="v-data-table-footer__pagination">
            <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
              <ul class="v-pagination__list">
                <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" aria-label="Next page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" aria-label="Last page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`VerifiedContracts.vue > Should show verified contracts with stats and table 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <h2 class="text-h6 font-weight-medium">Verified Contracts</h2>
  <hr class="v-divider v-theme--light my-4" aria-orientation="horizontal" role="separator">
  <div class="v-row">
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Deployed (total)" loading="false" long="false" raw="true" value="100"></stat-number-stub>
    </div>
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Deployed (24h)" loading="false" long="false" raw="true" value="5"></stat-number-stub>
    </div>
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Verified (Total)" loading="false" long="false" raw="false" value="50"></stat-number-stub>
    </div>
    <div class="v-col-sm-6 v-col-lg-3 v-col-12">
      <stat-number-stub title="Contracts Verified (24h)" loading="false" long="false" raw="true" value="2"></stat-number-stub>
    </div>
  </div>
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated mt-4">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" disable-pagination="true">
        <!---->
        <div class="v-table__wrapper">
          <table>
            <!---->
            <thead class="v-data-table__thead" role="rowgroup">
              <tr>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Address</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Name</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Compiler Version</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Txns</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Settings</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Verified</span>
                    <!---->
                    <!---->
                  </div>
                </th>
                <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
                  <div class="v-data-table-header__content"><span>Tags</span>
                    <!---->
                    <!---->
                  </div>
                </th>
              </tr>
              <!---->
            </thead>
            <!---->
            <tbody class="v-data-table__tbody" role="rowgroup">
              <!---->
              <tr class="v-data-table__tr">
                <td class="v-data-table__td v-data-table-column--align-start">
                  <hash-link-stub type="address" hash="0x123" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">TestContract</td>
                <td class="v-data-table__td v-data-table-column--align-start">0.8.0</td>
                <td class="v-data-table__td v-data-table-column--align-start">10</td>
                <td class="v-data-table__td v-data-table-column--align-start"><i class="mdi-lightning-bolt mdi v-icon notranslate v-theme--light v-icon--size-small mr-2" aria-hidden="true" aria-describedby="v-tooltip-9">
                    <!---->
                    <!--teleport start-->
                    <!--teleport end-->
                  </i><i class="mdi-wrench mdi v-icon notranslate v-theme--light v-icon--size-small" aria-hidden="true" aria-describedby="v-tooltip-7"></i>
                  <!--teleport start-->
                  <!--teleport end-->
                </td>
                <td class="v-data-table__td v-data-table-column--align-start">03/20 11:00:00 AM<br><small class="text-caption text-medium-emphasis">in 1 year</small></td>
                <td class="v-data-table__td v-data-table-column--align-start"><span class="v-chip v-theme--light text-success v-chip--density-default v-chip--size-small v-chip--variant-tonal mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
                  <!---->
                  <!---->
                  <div class="v-chip__content" data-no-activator="">ERC20</div>
                  <!---->
                  <!----></span>
                </td>
              </tr>
              <!---->
              <!---->
            </tbody>
            <!---->
            <!---->
          </table>
        </div>
        <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
        <div class="v-data-table-footer">
          <!---->
          <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
            <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
              <!---->
              <div class="v-input__control">
                <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-2">
                  <div class="v-field__overlay"></div>
                  <div class="v-field__loader">
                    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <div class="v-field__field" data-no-activator="">
                    <!---->
                    <!---->
                    <!---->
                    <div class="v-field__input" data-no-activator="">
                      <!---->
                      <!---->
                      <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open" value="10">
                    </div>
                    <!---->
                  </div>
                  <!---->
                  <div class="v-field__append-inner">
                    <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                    <!---->
                  </div>
                  <div class="v-field__outline">
                    <div class="v-field__outline__start"></div>
                    <!---->
                    <div class="v-field__outline__end"></div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class="v-data-table-footer__info">
            <div>1-10 of 10</div>
          </div>
          <div class="v-data-table-footer__pagination">
            <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
              <ul class="v-pagination__list">
                <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Next page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                    <!---->
                    <!---->
                  </button></li>
                <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Last page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator=""><!----></span>
                    <!---->
                    <!---->
                  </button></li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;
